# Datasearch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: repository.md
lib/: worker.py
lib/api/handlers/: router.py  search.py  system.py  tracking.py
lib/core/: config.py  constants.py  container.py  logger.py
lib/crons/: cleanup.py  enrich.py
lib/models/: __init__.py  base.py  dataset.py  enrichment_log.py
lib/repositories/: __init__.py  base.py  dataset.py  enrichment_log.py
lib/schemas/: common.py  dataset.py
lib/services/enrichment/: client_hf.py
lib/services/enrichment/kaggle_parser/: __init__.py  client_kaggle.py  models.py  utils.py
lib/services/enrichment/kaggle_parser/services/: api_parser.py  meta_parser.py
lib/services/ml/: embedder.py
migrations/: 001_create_datasets_schema.sql
